fixing lobby spacing

--- a/frequent-fliers-html/lobby.css
+++ b/frequent-fliers-html/lobby.css
@@ -197,6 +197,7 @@ button:hover {
     margin: auto;
     width: 100%;
     padding:10px;
+    text-align: center;
   }
 
   .instruction{
